update: details page created

--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -55,3 +55,141 @@
 		}
 	}
 }
+
+.product-card {
+	padding: 18px;
+	overflow: hidden;
+	position: relative;
+	border-radius: 5px;
+	background-color: #fff;
+	border: 1px solid #cfcfcf;
+
+	span {
+		font-size: 8px;
+		line-height: 12px;
+		margin-bottom: 4px;
+	}
+
+	h2 {
+		color: #1d1d1d;
+		font-size: 16px;
+		line-height: 24px;
+		margin-bottom: 3px;
+		font-weight: 700;
+		text-transform: capitalize;
+	}
+
+	p {
+		font-size: 9px;
+		color: #747474;
+		line-height: 12.6px;
+	}
+
+	&-price {
+		padding: 0px 12px;
+		margin: 16px 0px;
+		border-radius: 5px;
+		background-color: #fff;
+		border: 0.5px solid #cfcfcf;
+
+		span,
+		h2 {
+			color: #1d1d1d;
+		}
+
+		span {
+			font-size: 8px;
+			line-height: 12px;
+		}
+		h2 {
+			margin: 0;
+			font-size: 30px;
+			font-weight: 700;
+			line-height: 45px;
+			text-align: center;
+		}
+	}
+
+	&-actions {
+		display: flex;
+		align-items: center;
+		a {
+			width: 50%;
+			font-size: 13px;
+			font-weight: 700;
+			padding: 12px 20px;
+			line-height: 19.5px;
+			text-align: center;
+			text-transform: uppercase;
+			transition: all 0.3s linear;
+			svg {
+				color: $primary;
+				margin-right: 6px;
+			}
+
+			&:nth-child(1) {
+				color: #fff;
+				margin-right: 8px;
+				background-color: $primary;
+			}
+
+			&:nth-child(2) {
+				color: #1d1d1d;
+
+				&:hover {
+					color: #fff;
+					background-color: $primary;
+
+					svg {
+						color: #fff;
+					}
+				}
+			}
+		}
+	}
+}
+
+.store-card {
+	display: flex;
+	padding: 8px 15px;
+	overflow: hidden;
+	position: relative;
+	border-radius: 5px;
+	background: #f5f5f5;
+	align-items: center;
+	justify-content: space-between;
+	border: 0.5px solid #cfcfcf;
+	.info {
+		display: flex;
+		margin-right: 24px;
+		align-items: center;
+
+		img {
+			margin-right: 10px;
+		}
+
+		h2,
+		p {
+			color: #1d1d1d;
+		}
+
+		h2 {
+			font-size: 13px;
+			font-weight: 700;
+			line-height: 19.5px;
+			text-transform: capitalize;
+		}
+		p {
+			font-size: 8px;
+			line-height: 12px;
+			max-width: 150px;
+		}
+	}
+
+	a {
+		color: $primary;
+		font-size: 10px;
+		line-height: 15px;
+		text-decoration: underline;
+	}
+}
