--- a/assets/scss/layouts/_banner.scss
+++ b/assets/scss/layouts/_banner.scss
@@ -1,143 +1,146 @@
-.banner  { 
-    padding-top: 240px;
-    position: relative;
-    overflow: hidden;
-    background-color: #fff;
+.banner {
+	padding-top: 240px;
+	position: relative;
+	overflow: hidden;
+	background-color: #fff;
 
-    @include max(991px) { 
-        padding-top: 0px;
-    }
+	@include max(991px) {
+		padding-top: 0px;
+	}
 
+	&-content {
+		padding-top: 60px;
+		padding-bottom: 100px;
+		background-color: #f6f6f6;
 
-    &-content { 
-        padding-top: 60px;
-        padding-bottom: 100px;
-        background-color: #F6F6F6;
+		@include max(991px) {
+			padding-top: 660px;
+		}
 
-        @include max(991px) { 
-            padding-top: 660px;
-        }
+		@include max(767px) {
+			padding-top: 490px;
+			padding-bottom: 30px;
+		}
 
-        @include max(767px)  { 
-            padding-top: 490px;
-            padding-bottom: 30px;
-        }
+		@include max(425px) {
+			padding-top: 440px;
+		}
 
+		&-bottom {
+			padding: 100px 0px;
+			background-color: $primary;
+			&__info {
+				text-align: center;
 
+				h2 {
+					color: #fff;
+					font-size: 40px;
+					line-height: 48px;
+					margin-bottom: 18px;
+					font-family: "nulshock";
+				}
 
-        @include max(425px) { 
-            padding-top: 440px;
-        }
+				p {
+					color: #fff;
+					font-size: 16px;
+					line-height: 22.2px;
+					max-width: 780px;
+					margin: auto;
+				}
+			}
+		}
+	}
 
+	&-info {
+		@include max(991px) {
+			text-align: center;
+		}
 
+		h2 {
+			@extend %heading;
+			margin-bottom: 18px;
 
-        &-bottom  { 
-            padding: 100px 0px;
-            background-color: $primary;
-            &__info { 
-                text-align: center;
+			@include max(767px) {
+				margin-bottom: 10px;
+			}
+		}
 
-                h2  { 
-                    color: #fff;
-                    font-size: 40px;
-                    line-height: 48px;
-                    margin-bottom: 18px;
-                    font-family: "nulshock";
-                }
+		p {
+			font-size: 16px;
+			color: #747474;
+			line-height: 22.4px;
+			margin-bottom: 18px;
+		}
 
-                p { 
-                    color: #fff;
-                    font-size: 16px;
-                    line-height: 22.2px;
-                    max-width: 780px;
-                    margin: auto;
-                }
-            }
+		a.button {
+			width: 190px;
+			height: 44px;
+			text-align: center;
 
-        }
+			@include max(767px) {
+				display: flex;
+				width: 124px;
+				margin: auto;
+				align-items: center;
+				justify-content: center;
+				padding: 7px 14px !important;
+			}
+		}
+	}
 
-    }
+	&-overlay {
+		left: -100px;
+		top: -40px;
+		position: absolute;
 
-    &-info { 
+		@include max(1380px) {
+			top: 130px;
+		}
 
-        @include max(991px) { 
-            text-align: center;
-        }
+		@include max(991px) {
+			top: 30px;
+			left: 50%;
+			transform: translateX(-50%);
+		}
 
-        h2 { 
-            @extend %heading;
-            margin-bottom: 18px;
+		@include max(425px) {
+			top: 110px;
+		}
 
-            @include max(767px) { 
-                margin-bottom: 10px;
-            }
+		img {
+			@include max(1380px) {
+				max-width: 680px;
+			}
 
-        }
+			@include max(767px) {
+				max-width: 480px;
+			}
 
-        p {
+			@include max(425px) {
+				max-width: 320px;
+			}
+		}
+	}
+}
 
-            font-size: 16px;
-            color: #747474;
-            line-height: 22.4px;
-           margin-bottom: 18px; 
-        }
+.breadcrumb {
+	padding: 138px 0px;
+	padding-top: 220px;
 
-        a.button { 
-            width: 190px;
-            height: 44px;
-            text-align: center;
+	@include max(1200px) {
+		padding: 60px 0px;
+		padding-top: 160px;
+	}
 
-            @include max(767px ) { 
-                display: flex;
-                width: 124px;
-                margin: auto;
-                align-items: center;
-                justify-content: center;
-                padding: 7px 14px !important;
+	@include max(575px) {
+		// padding: 30px 0px;
+		padding-top: 140px;
+	}
 
-            }
-
-        }
-    }
-
-
-    &-overlay {
-        left: -100px;
-        top: -40px;
-        position: absolute;
-
-
-        @include max(1380px) {
-            top: 130px;
-         }
-
-         @include max(991px) { 
-            top: 30px;
-            left: 50%;
-            transform: translateX(-50%);
-         }
-
-         @include max(425px) { 
-             top: 110px;
-         }
-
-
-
-        img { 
-            @include max(1380px) { 
-                max-width: 680px;
-            }
-
-            @include max(767px) { 
-                max-width: 480px;
-            }
-
-
-            @include max(425px) { 
-                max-width: 320px;
-            }
-
-        }
-    }
-
+	&-content {
+		text-align: center;
+		h2 {
+			@extend %heading;
+		}
+	}
 }
