--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,7 @@
 @import "components/input-field";
 
 // Layouts
+@import "layouts/preview";
 @import "layouts/about";
 @import "layouts/banner";
 @import "layouts/contact";
