--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,6 +11,7 @@
 
 // Layouts
 @import "layouts/preview";
+@import "layouts/order";
 @import "layouts/about";
 @import "layouts/banner";
 @import "layouts/contact";
