--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -291,12 +291,218 @@ body {
   text-decoration: underline;
 }
 
+.order-card {
+  display: flex;
+  position: relative;
+  border-radius: 5px;
+  padding: 24px 36px;
+  align-items: center;
+  background-color: #fff;
+  border: 1px solid #cfcfcf;
+}
+
+@media (max-width: 991px) {
+  .order-card {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media (max-width: 767px) {
+  .order-card {
+    padding: 22px 30px;
+  }
+}
+
+.order-card-img {
+  margin-right: 60px;
+}
+
+@media (max-width: 991px) {
+  .order-card-img {
+    margin: 0;
+    width: 100%;
+  }
+}
+
+.order-card-img h2 {
+  font-size: 20px;
+  color: #1d1d1d;
+  line-height: 24px;
+  margin-bottom: 8px;
+  font-family: "nulshock";
+}
+
+@media (max-width: 991px) {
+  .order-card-img h2 {
+    font-size: 15px;
+    line-height: 18px;
+    text-align: center;
+  }
+}
+
+.order-card-img .img {
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  position: relative;
+}
+
+@media (max-width: 991px) {
+  .order-card-img .img {
+    width: 100%;
+  }
+}
+
+.order-card-img .img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 991px) {
+  .order-card-img .img img {
+    object-fit: contain;
+  }
+}
+
+.order-card-info ul {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+  align-items: center;
+}
+
+.order-card-info ul li {
+  margin-right: 50px;
+}
+
+@media (max-width: 767px) {
+  .order-card-info ul li {
+    margin-right: 26px;
+  }
+}
+
+.order-card-info ul li span {
+  font-size: 8px;
+  color: #747474;
+  line-height: 12px;
+}
+
+.order-card-info ul li p {
+  font-size: 16px;
+  font-weight: 700;
+  color: #1d1d1d;
+  line-height: 24px;
+  text-transform: capitalize;
+}
+
+@media (max-width: 57px) {
+  .order-card-info ul li p {
+    font-size: 12px;
+    line-height: 18px;
+  }
+}
+
+.order-card-info blockquote p {
+  font-size: 16px;
+  color: #747474;
+  line-height: 22.4px;
+  padding-bottom: 40px;
+}
+
+.team-card-img {
+  z-index: 3;
+  width: 176px;
+  height: 272px;
+  margin: 0px auto;
+  position: relative;
+  margin-bottom: 18px;
+}
+
+.team-card-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.team-card-img::after {
+  content: "";
+  top: -34px;
+  right: -40px;
+  z-index: -1;
+  width: 137px;
+  height: 267px;
+  position: absolute;
+  background-color: #ff0020;
+}
+
+.team-card-info {
+  text-align: center;
+}
+
+.team-card-info h2 {
+  color: #000;
+  font-size: 20px;
+  line-height: 24px;
+  font-family: "nulshock";
+}
+
+@media (max-width: 575px) {
+  .team-card-info h2 {
+    font-size: 12.18px;
+    line-height: 14.62px;
+  }
+}
+
+.team-card-info p {
+  color: #000;
+  font-size: 16px;
+  line-height: 32px;
+}
+
+@media (max-width: 575px) {
+  .team-card-info p {
+    font-size: 9.75px;
+    line-height: 19.49px;
+  }
+}
+
+.input {
+  overflow: hidden;
+  position: relative;
+}
+
+.input label {
+  color: #1d1d1d;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 8px;
+  display: inline-block;
+}
+
+.input label sup {
+  color: #ff0020;
+}
+
+.input input {
+  font-size: 13px;
+  line-height: 19.5px;
+  color: #1d1d1d;
+  width: 100%;
+  padding: 10px 14px;
+  border-radius: 5px;
+  background-color: #fff;
+  border: 0.5px solid #cfcfcf;
+}
+
 .input-field {
   width: 565px;
   overflow: hidden;
   position: relative;
   border-radius: 5px;
   background-color: #fff;
+  text-transform: capitalize;
   border: 1px solid #d9d9d9;
 }
 
@@ -358,6 +564,109 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.order {
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 0px;
+}
+
+.order-about {
+  padding-bottom: 60px;
+}
+
+.order-about h2 {
+  font-size: 20px;
+  line-height: 24px;
+  margin-bottom: 18px;
+  font-family: "nulshock";
+}
+
+.order-about p {
+  color: #747474;
+  font-size: 16px;
+  line-height: 22.4px;
+}
+
+.order-fields {
+  gap: 30px;
+  display: grid;
+  margin-bottom: 60px;
+  align-items: flex-end;
+  grid-template-columns: 1fr 1fr 1fr 165px;
+}
+
+@media (max-width: 991px) {
+  .order-fields {
+    gap: 20px;
+    grid-template-columns: 1fr;
+  }
+}
+
+.order-fields .button {
+  height: 40px;
+}
+
+.about {
+  padding: 40px 0px;
+  padding-top: 0px;
+  position: relative;
+}
+
+.about-img {
+  width: 100%;
+  height: 380px;
+  overflow: hidden;
+  position: relative;
+  padding-right: 36px;
+}
+
+@media (max-width: 991px) {
+  .about-img {
+    padding: 0px;
+    margin-bottom: 24px;
+  }
+}
+
+.about-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about-info h2 {
+  font-size: 30px;
+  line-height: 36px;
+  max-width: 420px;
+  margin-bottom: 25px;
+  font-family: "nulshock";
+}
+
+@media (max-width: 767px) {
+  .about-info h2 {
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 12px;
+  }
+}
+
+.about blockquote {
+  margin: 0;
+}
+
+.about blockquote p {
+  color: #6d6d6d;
+  font-size: 16px;
+  margin-bottom: 18px;
+  line-height: 22.4px;
+}
+
+@media (max-width: 575px) {
+  .about blockquote p {
+    font-size: 12px;
+    line-height: 16.8px;
+  }
 }
 
 .choose {
@@ -677,6 +986,82 @@ body {
 
 .breadcrumb-content {
   text-align: center;
+}
+
+.contact {
+  overflow: hidden;
+  position: relative;
+  padding: 40px 0px;
+  background-color: #f5f5f5;
+}
+
+@media (max-width: 767px) {
+  .contact {
+    padding: 30px 0px;
+  }
+}
+
+.contact h2 {
+  font-size: 30px;
+  line-height: 36px;
+  max-width: 616px;
+  margin-bottom: 32px;
+  font-family: "nulshock";
+}
+
+@media (max-width: 991px) {
+  .contact h2 {
+    text-align: center;
+    margin: 0px auto;
+    margin-bottom: 44px;
+  }
+}
+
+@media (max-width: 767px) {
+  .contact h2 {
+    font-size: 20px;
+    line-height: 24px;
+    max-width: 100%;
+  }
+}
+
+.contact ul {
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 991px) {
+  .contact ul {
+    flex-direction: column;
+  }
+}
+
+.contact ul li {
+  display: flex;
+  align-items: center;
+  margin-right: 100px;
+}
+
+@media (max-width: 991px) {
+  .contact ul li {
+    margin: 0px;
+    margin-bottom: 8px;
+  }
+}
+
+.contact ul li .icon {
+  margin-right: 12px;
+}
+
+.contact ul li p {
+  font-size: 16px;
+  line-height: 32px;
+  text-transform: capitalize;
+}
+
+.contact ul li p span {
+  color: #ff0020;
+  font-weight: 700;
 }
 
 .footer {
@@ -1396,6 +1781,38 @@ body {
     font-size: 12px;
     line-height: 16.8px;
   }
+}
+
+.team {
+  z-index: 9;
+  padding: 40px 0px;
+  position: relative;
+}
+
+.team .heading {
+  color: #000;
+  font-size: 30px;
+  line-height: 36px;
+  margin-bottom: 60px;
+  font-family: "nulshock";
+}
+
+@media (max-width: 767px) {
+  .team .heading {
+    text-align: center;
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 575px) {
+  .team .heading {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+
+.team .team-card {
+  margin-bottom: 60px;
 }
 
 .testimonial {
