--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -193,3 +193,164 @@
 		text-decoration: underline;
 	}
 }
+
+.order-card {
+	display: flex;
+	position: relative;
+	border-radius: 5px;
+	padding: 24px 36px;
+	align-items: center;
+	background-color: #fff;
+	border: 1px solid #cfcfcf;
+
+	@include max(991px) {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	@include max(767px) {
+		padding: 22px 30px;
+	}
+
+	&-img {
+		margin-right: 60px;
+
+		@include max(991px) {
+			margin: 0;
+			width: 100%;
+		}
+		h2 {
+			font-size: 20px;
+			color: #1d1d1d;
+			line-height: 24px;
+			margin-bottom: 8px;
+			font-family: "nulshock";
+
+			@include max(991px) {
+				font-size: 15px;
+				line-height: 18px;
+				text-align: center;
+			}
+		}
+
+		.img {
+			width: 300px;
+			height: 300px;
+			overflow: hidden;
+			position: relative;
+
+			@include max(991px) {
+				width: 100%;
+			}
+
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+
+				@include max(991px) {
+					object-fit: contain;
+				}
+			}
+		}
+	}
+
+	&-info {
+		ul {
+			display: flex;
+			flex-wrap: wrap;
+			margin-bottom: 30px;
+			align-items: center;
+
+			li {
+				margin-right: 50px;
+
+				@include max(767px) {
+					margin-right: 26px;
+				}
+
+				span {
+					font-size: 8px;
+					color: #747474;
+					line-height: 12px;
+				}
+
+				p {
+					font-size: 16px;
+					font-weight: 700;
+					color: #1d1d1d;
+					line-height: 24px;
+					text-transform: capitalize;
+
+					@include max(57px) {
+						font-size: 12px;
+						line-height: 18px;
+					}
+				}
+			}
+		}
+
+		blockquote {
+			p {
+				font-size: 16px;
+				color: #747474;
+				line-height: 22.4px;
+				padding-bottom: 40px;
+			}
+		}
+	}
+}
+
+.team-card {
+	&-img {
+		z-index: 3;
+		width: 176px;
+		height: 272px;
+		margin: 0px auto;
+		position: relative;
+		margin-bottom: 18px;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+
+		&::after {
+			content: "";
+			top: -34px;
+			right: -40px;
+			z-index: -1;
+			width: 137px;
+			height: 267px;
+			position: absolute;
+			background-color: $primary;
+		}
+	}
+
+	&-info {
+		text-align: center;
+
+		h2 {
+			color: #000;
+			font-size: 20px;
+			line-height: 24px;
+			font-family: "nulshock";
+
+			@include max(575px) {
+				font-size: 12.18px;
+				line-height: 14.62px;
+			}
+		}
+
+		p {
+			color: #000;
+			font-size: 16px;
+			line-height: 32px;
+
+			@include max(575px) {
+				font-size: 9.75px;
+				line-height: 19.49px;
+			}
+		}
+	}
+}
