--- a/assets/scss/layouts/_about.scss
+++ b/assets/scss/layouts/_about.scss
@@ -1,3 +1,58 @@
+.about {
+	padding: 40px 0px;
+	padding-top: 0px;
+	position: relative;
+
+	&-img {
+		width: 100%;
+		height: 380px;
+		overflow: hidden;
+		position: relative;
+		padding-right: 36px;
+
+		@include max(991px) {
+			padding: 0px;
+			margin-bottom: 24px;
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+
+	&-info {
+		h2 {
+			font-size: 30px;
+			line-height: 36px;
+			max-width: 420px;
+			margin-bottom: 25px;
+			font-family: "nulshock";
+
+			@include max(767px) {
+				font-size: 20px;
+				line-height: 24px;
+				margin-bottom: 12px;
+			}
+		}
+	}
+	blockquote {
+		margin: 0;
+		p {
+			color: #6d6d6d;
+			font-size: 16px;
+			margin-bottom: 18px;
+			line-height: 22.4px;
+
+			@include max(575px) {
+				font-size: 12px;
+				line-height: 16.8px;
+			}
+		}
+	}
+}
+
 .choose {
 	position: relative;
 	padding: 80px 0px;
