--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -293,6 +293,7 @@ body {
 
 .order-card {
   display: flex;
+  overflow: hidden;
   position: relative;
   border-radius: 5px;
   padding: 24px 36px;
@@ -311,6 +312,7 @@ body {
 @media (max-width: 767px) {
   .order-card {
     padding: 22px 30px;
+    padding-bottom: 40px;
   }
 }
 
@@ -564,6 +566,98 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.progress {
+  height: 4px;
+  width: 100%;
+  position: relative;
+  overflow: visible;
+}
+
+.progress-bar {
+  overflow: visible;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #ff0020;
+}
+
+.progress-status {
+  top: 50%;
+  width: 100%;
+  display: flex;
+  position: absolute;
+  align-items: center;
+  transform: translateY(-50%);
+  justify-content: space-between;
+}
+
+.progress-status .info {
+  text-align: center;
+}
+
+.progress-status .info:nth-child(1) {
+  margin-left: -24px;
+}
+
+@media (max-width: 767px) {
+  .progress-status .info:nth-child(1) {
+    margin-left: -4px;
+  }
+}
+
+.progress-status .info:nth-last-child(1) {
+  margin-right: -30px;
+}
+
+@media (max-width: 767px) {
+  .progress-status .info:nth-last-child(1) {
+    margin-right: -15px;
+  }
+}
+
+.progress-status .info span {
+  color: #747474;
+  font-size: 9px;
+  line-height: 12px;
+  margin-bottom: 4px;
+  font-weight: 700;
+  white-space: nowrap;
+}
+
+@media (max-width: 767px) {
+  .progress-status .info span {
+    font-size: 5px;
+    line-height: 7.5px;
+  }
+}
+
+.progress-status .info-box {
+  width: 20px;
+  height: 20px;
+  margin: auto;
+  border: 2px solid #ff0020;
+  background-color: #fff;
+}
+
+.progress-status .info h2 {
+  font-size: 12px;
+  color: #1d1d1d;
+  line-height: 12px;
+  font-weight: 700;
+  margin-top: 6px;
+  white-space: nowrap;
+}
+
+@media (max-width: 767px) {
+  .progress-status .info h2 {
+    font-size: 8px;
+    line-height: 12px;
+  }
+}
+
+.progress-status .info.active .info-box {
+  background-color: #ff0020;
 }
 
 .order {
