--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -152,6 +152,20 @@
 					justify-content: center;
 				}
 			}
+
+			&.active {
+				.nav-link {
+					color: $primary;
+
+					&.dropdown {
+						&-toggle {
+							&::after {
+								border-color: $primary;
+							}
+						}
+					}
+				}
+			}
 		}
 
 		&-link {
