--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,6 +83,11 @@ body {
   background-color: #ff0020;
   padding: 11px 21px !important;
   box-shadow: 0px 4px 20px 0px #ff00201a;
+  transition: all 0.3s linear;
+}
+
+.button:hover {
+  color: #fff;
 }
 
 .ig-card {
