--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -8,4 +8,9 @@
 	background-color: $primary;
 	padding: 11px 21px !important;
 	box-shadow: 0px 4px 20px 0px #ff00201a;
+	transition: all 0.3s linear;
+
+	&:hover {
+		color: #fff;
+	}
 }
