--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -4,6 +4,10 @@
 	overflow: hidden;
 	position: relative;
 
+	@include max(767px) {
+		height: 75px;
+	}
+
 	img {
 		width: 100%;
 		height: 100%;
@@ -15,6 +19,12 @@
 		left: 50%;
 		transform: translate(-50%, -50%);
 		position: absolute;
+
+		img {
+			@include max(767px) {
+				transform: scale(0.5);
+			}
+		}
 	}
 }
 
