--- a/assets/scss/layouts/_products.scss
+++ b/assets/scss/layouts/_products.scss
@@ -4,9 +4,17 @@
 	overflow: hidden;
 	position: relative;
 
+	@include max(991px) {
+		padding: 40px 0px;
+	}
+
 	.heading {
 		text-align: center;
 		margin-bottom: 80px;
+
+		@include max(767px) {
+			margin-bottom: 24px;
+		}
 
 		h2 {
 			@extend %heading;
@@ -24,6 +32,7 @@
 	}
 
 	&-content {
+		align-items: center;
 		@include max(991px) {
 			margin-bottom: 60px;
 		}
