--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -598,6 +598,15 @@ body {
   object-fit: cover;
 }
 
+.vbox-container {
+  width: 50%;
+  height: 620px;
+  top: 50%;
+  left: 50%;
+  overflow: hidden;
+  transform: translate(-50%, -50%);
+}
+
 .progress {
   height: 4px;
   width: 100%;
