--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -600,11 +600,17 @@ body {
 
 .vbox-container {
   width: 50%;
-  height: 620px;
   top: 50%;
   left: 50%;
   overflow: hidden;
+  height: 620px;
   transform: translate(-50%, -50%);
+}
+
+@media (max-width: 991px) {
+  .vbox-container {
+    width: 100%;
+  }
 }
 
 .progress {
